trunk/test/fail/ac/nestedruletypeunknown.app
//Error: nested rule type unknown:

application test

access control rules

  rule page name()
  {
    true
    rule page dsf()
    {
      true
    }
  }